# freedesktop-icon-lookup

./: Cargo.toml
b/: lookup.rs
src/: directory.rs  err.rs  lib.rs  lookup.rs  theme.rs
