[package]
name = "freedesktop-icon-lookup"
description = "Freedesktop icons lookup"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/l4l/freedesktop-icon-lookup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = []

[dependencies]
either = "1"
thiserror = "2"
tini = "1"
log = { version = "0.4", optional = true }
